# otfccxx-lib

./: CMakeLists.txt  CMakePresets.json  CMake_dependencies.cmake  README.md
cmake/: stdlibQuery.cmake
cmake/packaging/: CMakeLists.txt
demos/: demo_1.cpp
include/otfccxx/: otfccxx.hpp
include/otfccxx-lib/: fmem_file.hpp  fontsmith.hpp  otfccxx-lib.hpp  otfccxx-lib_OLD.hpp
src/: fmem_file.cpp  fontsmith.cpp  machinery_stderr_capt.cpp  main.cpp  otfccxx-lib.cpp  otfccxx.cpp
src/private_inc/otfccxx-lib_private/: fmem_file.hpp  machinery_uptr.hpp  otfcc_iElement.hpp  otfcc_iVector.hpp
src/private_inc/private/: otfcc_interface.hpp
